--- a/index.html
+++ b/index.html
@@ -354,7 +354,12 @@
               <img src="assets/link-l.svg" alt="Link" />
             </div>
             <div class="project-cards-list">
-              <a href="" class="project-card" data-project="1">
+              <a
+                href="https://www.emmanuelpriestley.xyz/"
+                class="project-card"
+                data-project="1"
+                target="_blank"
+              >
                 <div class="project-img">
                   <img src="assets/project.png" alt="Project Image" />
                 </div>
@@ -362,89 +367,8 @@
                 <div class="project-details">
                   <h3 class="project-name">Emmanuel Adeleye (Portfolio)</h3>
                   <p class="project-desc">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quas impedit facere eveniet rerum reprehenderit et provident
-                    iste, eligendi veniam voluptas.
-                  </p>
-                  <div class="project-tools">
-                    <span>HTML5</span>
-                    <span>CSS</span>
-                    <span>JavaScript</span>
-                  </div>
-                </div>
-              </a>
-
-              <a href="" class="project-card" data-project="2">
-                <div class="project-img">
-                  <img src="assets/project.png" alt="Project Image" />
-                </div>
-
-                <div class="project-details">
-                  <h3 class="project-name">Emmanuel Adeleye (Portfolio)</h3>
-                  <p class="project-desc">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quas impedit facere eveniet rerum reprehenderit et provident
-                    iste, eligendi veniam voluptas.
-                  </p>
-                  <div class="project-tools">
-                    <span>HTML5</span>
-                    <span>CSS</span>
-                    <span>JavaScript</span>
-                  </div>
-                </div>
-              </a>
-
-              <a href="" class="project-card" data-project="3">
-                <div class="project-img">
-                  <img src="assets/project.png" alt="Project Image" />
-                </div>
-
-                <div class="project-details">
-                  <h3 class="project-name">Emmanuel Adeleye (Portfolio)</h3>
-                  <p class="project-desc">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quas impedit facere eveniet rerum reprehenderit et provident
-                    iste, eligendi veniam voluptas.
-                  </p>
-                  <div class="project-tools">
-                    <span>HTML5</span>
-                    <span>CSS</span>
-                    <span>JavaScript</span>
-                  </div>
-                </div>
-              </a>
-
-              <a href="" class="project-card" data-project="4">
-                <div class="project-img">
-                  <img src="assets/project.png" alt="Project Image" />
-                </div>
-
-                <div class="project-details">
-                  <h3 class="project-name">Emmanuel Adeleye (Portfolio)</h3>
-                  <p class="project-desc">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quas impedit facere eveniet rerum reprehenderit et provident
-                    iste, eligendi veniam voluptas.
-                  </p>
-                  <div class="project-tools">
-                    <span>HTML5</span>
-                    <span>CSS</span>
-                    <span>JavaScript</span>
-                  </div>
-                </div>
-              </a>
-
-              <a href="" class="project-card" data-project="5">
-                <div class="project-img">
-                  <img src="assets/project.png" alt="Project Image" />
-                </div>
-
-                <div class="project-details">
-                  <h3 class="project-name">Emmanuel Adeleye (Portfolio)</h3>
-                  <p class="project-desc">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quas impedit facere eveniet rerum reprehenderit et provident
-                    iste, eligendi veniam voluptas.
+                    First dark mode themed website I worked on. Played with CSS
+                    animations.
                   </p>
                   <div class="project-tools">
                     <span>HTML5</span>
@@ -455,44 +379,143 @@
               </a>
 
               <a
-                href=""
+                href="https://publikphigor-web-agency.netlify.app/"
+                class="project-card"
+                data-project="2"
+                target="_blank"
+              >
+                <div class="project-img">
+                  <img src="assets/web-agency.png" alt="Project Image" />
+                </div>
+
+                <div class="project-details">
+                  <h3 class="project-name">Web Agency Template</h3>
+                  <p class="project-desc">
+                    Designed this as a template for a web development agency. It
+                    is mobile responsive, fast, and accesible. Styled it using
+                    Sass.
+                    <br />
+                    Implemented a fancy pricing form.
+                  </p>
+                  <div class="project-tools">
+                    <span>HTML5</span>
+                    <span>CSS (Sass)</span>
+                    <span>JavaScript</span>
+                  </div>
+                </div>
+              </a>
+
+              <a
+                href="https://twfnft.netlify.app/"
+                class="project-card"
+                data-project="3"
+                target="_blank"
+              >
+                <div class="project-img">
+                  <img src="assets/twfnft.png" alt="Project Image" />
+                </div>
+
+                <div class="project-details">
+                  <h3 class="project-name">TWFNFT Website Clone</h3>
+                  <p class="project-desc">
+                    Cloned this NFT website using Sass and JavaScript.
+                  </p>
+                  <div class="project-tools">
+                    <span>HTML5</span>
+                    <span>CSS (Sass)</span>
+                    <span>JavaScript</span>
+                  </div>
+                </div>
+              </a>
+
+              <a
+                href="https://publikphigor.me/crypto"
+                class="project-card"
+                data-project="4"
+                target="_blank"
+              >
+                <div class="project-img">
+                  <img src="assets/nft-template.png" alt="Project Image" />
+                </div>
+
+                <div class="project-details">
+                  <h3 class="project-name">NFT Website Template</h3>
+                  <p class="project-desc">
+                    Played with Elementor animations while creating this NFT
+                    website template using WordPress and Elementor.
+                  </p>
+                  <div class="project-tools">
+                    <span>WordPress</span>
+                    <span>Elementor</span>
+                  </div>
+                </div>
+              </a>
+
+              <a
+                href="https://publikphigor-csa.netlify.app/"
+                class="project-card"
+                data-project="5"
+                target="_blank"
+              >
+                <div class="project-img">
+                  <img src="assets/csa.png" alt="Project Image" />
+                </div>
+
+                <div class="project-details">
+                  <h3 class="project-name">Crypto Course Website</h3>
+                  <p class="project-desc">
+                    A crypto website for taking blokchain related courses (like
+                    Udemy).
+                    <br />
+                    Used CSS grid and flexbox in achieving the layout. Used
+                    JavaScript for the dashboard interactions.
+                  </p>
+                  <div class="project-tools">
+                    <span>HTML5</span>
+                    <span>CSS</span>
+                    <span>JavaScript</span>
+                    <span>PHP</span>
+                  </div>
+                </div>
+              </a>
+
+              <a
+                href="https://publikphigor.me/shopper/"
                 class="project-card hide hidden-project"
                 data-project="6"
+                target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/project.png" alt="Project Image" />
+                  <img src="assets/shopper.png" alt="Project Image" />
                 </div>
 
                 <div class="project-details">
-                  <h3 class="project-name">Emmanuel Adeleye (Portfolio)</h3>
+                  <h3 class="project-name">Shopper</h3>
                   <p class="project-desc">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quas impedit facere eveniet rerum reprehenderit et provident
-                    iste, eligendi veniam voluptas.
+                    A simple landing page built with WordPress and Elementor.
                   </p>
                   <div class="project-tools">
-                    <span>HTML5</span>
-                    <span>CSS</span>
-                    <span>JavaScript</span>
+                    <span>WordPress</span>
+                    <span>Elementor</span>
                   </div>
                 </div>
               </a>
 
               <a
-                href=""
+                href="https://bikeylogistics.com/"
                 class="project-card hide hidden-project"
                 data-project="7"
+                target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/project.png" alt="Project Image" />
+                  <img src="assets/bikeylog.png" alt="Project Image" />
                 </div>
 
                 <div class="project-details">
-                  <h3 class="project-name">Emmanuel Adeleye (Portfolio)</h3>
+                  <h3 class="project-name">Bikey Logistics</h3>
                   <p class="project-desc">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quas impedit facere eveniet rerum reprehenderit et provident
-                    iste, eligendi veniam voluptas.
+                    Simple landing page for my logistics brand. Built this from
+                    scratch with design inspiration from my dream!
                   </p>
                   <div class="project-tools">
                     <span>HTML5</span>
@@ -503,20 +526,19 @@
               </a>
 
               <a
-                href=""
+                href="https://onenigerian.netlify.app/"
                 class="project-card hide hidden-project"
                 data-project="8"
+                target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/project.png" alt="Project Image" />
+                  <img src="assets/onenaija.png" alt="Project Image" />
                 </div>
 
                 <div class="project-details">
-                  <h3 class="project-name">Emmanuel Adeleye (Portfolio)</h3>
+                  <h3 class="project-name">One Nigeria</h3>
                   <p class="project-desc">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quas impedit facere eveniet rerum reprehenderit et provident
-                    iste, eligendi veniam voluptas.
+                    A simple landing page for a brand. Played with CSS Grid
                   </p>
                   <div class="project-tools">
                     <span>HTML5</span>
