--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
           <li>
             <a href="https://publikphigor.me/blog/" target="_blank">My Blog</a>
           </li>
+          <li>
+            <a href="assets/Koladele-Olaitan (FE Resume).pdf" download="">
+              Resume
+            </a>
+          </li>
         </ul>
         <div class="mobile-social-links">
           <div class="s-link">
