Replaced Images, other fixes.

--- a/index.html
+++ b/index.html
@@ -94,11 +94,7 @@
         </nav>
 
         <div class="nav-btn">
-          <a
-            href="assets/Koladele-Olaitan (FE Resume).pdf"
-            class="btn"
-            download=""
-          >
+          <a href="assets/Koladele-Olaitan.pdf" class="btn" download="">
             Resume
           </a>
         </div>
@@ -136,9 +132,7 @@
             <a href="https://publikphigor.me/blog/" target="_blank">My Blog</a>
           </li>
           <li>
-            <a href="assets/Koladele-Olaitan (FE Resume).pdf" download="">
-              Resume
-            </a>
+            <a href="assets/Koladele-Olaitan.pdf" download="">Resume</a>
           </li>
         </ul>
         <div class="mobile-social-links">
@@ -363,7 +357,7 @@
                 target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/project.png" alt="Project Image" />
+                  <img src="assets/emmahux.png" alt="Project Image" />
                 </div>
 
                 <div class="project-details">
@@ -403,6 +397,7 @@
                     <span>HTML5</span>
                     <span>CSS (Sass)</span>
                     <span>JavaScript</span>
+                    <span>Bootstrap</span>
                   </div>
                 </div>
               </a>
@@ -476,7 +471,7 @@
                     <span>HTML5</span>
                     <span>CSS</span>
                     <span>JavaScript</span>
-                    <span>PHP</span>
+                    <span>Bootstrap</span>
                   </div>
                 </div>
               </a>
