Changed Image order on mobile.

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <!-- ==== frontend developer background ==== -->
         <div class="hero-bg"></div>
 
-        <div class="hero-first-half">
+        <div class="hero-first-half order-2">
           <h1 class="hero-name">
             Koladele
             <br />
@@ -191,7 +191,7 @@
           </div>
         </div>
 
-        <div class="hero-second-half">
+        <div class="hero-second-half order-1">
           <img src="assets/Koladele-Olaitan.png" alt="Koladele Olaitan Image" />
         </div>
 
