Changed Images format for optimization.

--- a/index.html
+++ b/index.html
@@ -192,7 +192,10 @@
         </div>
 
         <div class="hero-second-half order-1">
-          <img src="assets/Koladele-Olaitan.png" alt="Koladele Olaitan Image" />
+          <img
+            src="assets/Koladele-Olaitan.webp"
+            alt="Koladele Olaitan Image"
+          />
         </div>
 
         <!-- ==== rotating frontend developer image ==== -->
@@ -357,7 +360,7 @@
                 target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/emmahux.png" alt="Project Image" />
+                  <img src="assets/emmahux.webp" alt="Project Image" />
                 </div>
 
                 <div class="project-details">
@@ -381,7 +384,7 @@
                 target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/web-agency.png" alt="Project Image" />
+                  <img src="assets/web-agency.webp" alt="Project Image" />
                 </div>
 
                 <div class="project-details">
@@ -409,7 +412,7 @@
                 target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/twfnft.png" alt="Project Image" />
+                  <img src="assets/twfnft.webp" alt="Project Image" />
                 </div>
 
                 <div class="project-details">
@@ -432,7 +435,7 @@
                 target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/nft-template.png" alt="Project Image" />
+                  <img src="assets/nft-template.webp" alt="Project Image" />
                 </div>
 
                 <div class="project-details">
@@ -455,7 +458,7 @@
                 target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/csa.png" alt="Project Image" />
+                  <img src="assets/csa.webp" alt="Project Image" />
                 </div>
 
                 <div class="project-details">
@@ -483,7 +486,7 @@
                 target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/shopper.png" alt="Project Image" />
+                  <img src="assets/shopper.webp" alt="Project Image" />
                 </div>
 
                 <div class="project-details">
@@ -505,7 +508,7 @@
                 target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/bikeylog.png" alt="Project Image" />
+                  <img src="assets/bikeylog.webp" alt="Project Image" />
                 </div>
 
                 <div class="project-details">
@@ -529,7 +532,7 @@
                 target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/onenaija.png" alt="Project Image" />
+                  <img src="assets/onenaija.webp" alt="Project Image" />
                 </div>
 
                 <div class="project-details">
