--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
               <div class="form-group">
                 <textarea
                   name="message"
-                  id=""
+                  id="message"
                   rows="5"
                   autocomplete="off"
                   class="form-group-input"
