Added meta image.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Author" content="Koladele Olaitan" />
+    <meta name="og:image" content="assets/Koladele-Olaitan.webp" />
+    <meta name="og:image:type" content="image/webp" />
     <meta
       name="description"
       content="Koladele Olaitan is a developer with an eye for design. He speaks HTML, CSS, and JavaScript fluently. He has a passion for writing quality code."
