--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Author" content="Koladele Olaitan" />
-    <meta name="og:image" content="assets/Koladele-Olaitan.webp" />
+    <meta property="og:image" content="assets/Koladele-Olaitan.webp" />
     <meta name="og:image:type" content="image/webp" />
     <meta
       name="description"
