--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Author" content="Koladele Olaitan" />
-    <meta property="og:image" content="assets/Koladele-Olaitan.png" />
+    <meta
+      property="og:image"
+      content="https://koladeleolaitan.com/assets/Koladele-Olaitan.webp"
+    />
     <meta
       name="description"
       content="Koladele Olaitan is a developer with an eye for design. He speaks HTML, CSS, and JavaScript fluently. He has a passion for writing quality code."
