Added meta image.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="Author" content="Koladele Olaitan" />
     <meta
       property="og:image"
-      content="https://koladeleolaitan.com/assets/Koladele-Olaitan.webp"
+      content="https://koladeleolaitan.com/assets/Koladele-Olaitan.png"
     />
     <meta
       name="description"
