Fixing Meta tags.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       property="og:image"
       content="https://koladeleolaitan.com/assets/Koladele-Olaitan.png"
     />
+    <meta property="og:type" content="Portfolio Website" />
     <meta
       name="description"
       content="Koladele Olaitan is a developer with an eye for design. He speaks HTML, CSS, and JavaScript fluently. He has a passion for writing quality code."
