Changed meta image.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="Author" content="Koladele Olaitan" />
     <meta
       property="og:image"
-      content="https://koladeleolaitan.com/assets/Koladele-Olaitan.png"
+      content="https://koladeleolaitan.com/assets/meta-image.png"
     />
     <meta property="og:type" content="Portfolio Website" />
     <meta
