Fixed aspect ratio on all images.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
             <img
               src="assets/logo-l.png"
               alt="Koladele Olaitan Portfolio Logo"
+              width="300"
+              height="300"
             />
           </a>
         </div>
@@ -120,7 +122,12 @@
           </a>
         </div>
         <div class="theme-toggle-mobile dark">
-          <img src="assets/theme-d.svg" alt="Theme toggle" />
+          <img
+            src="assets/theme-d.svg"
+            alt="Theme toggle"
+            width="100"
+            height="100"
+          />
         </div>
         <div class="burger">
           <div class="line-1"></div>
@@ -147,7 +154,12 @@
               href="https://twitter.com/publikphigor"
               class="s-link-inner twitter-icon-m"
             >
-              <img src="assets/twitter-l.svg" alt="Twiter Icon" />
+              <img
+                src="assets/twitter-l.svg"
+                alt="Twiter Icon"
+                width="100"
+                height="100"
+              />
             </a>
           </div>
 
@@ -156,7 +168,12 @@
               href="https://www.linkedin.com/in/koladeleolaitan/"
               class="s-link-inner linkedin-icon-m"
             >
-              <img src="assets/linkedin-l.svg" alt="LinkedIn Icon" />
+              <img
+                src="assets/linkedin-l.svg"
+                alt="LinkedIn Icon"
+                width="100"
+                height="100"
+              />
             </a>
           </div>
 
@@ -165,7 +182,12 @@
               href="https://github.com/publikphigor/"
               class="s-link-inner github-icon-m"
             >
-              <img src="assets/github-l.svg" alt="GitHub Icon" />
+              <img
+                src="assets/github-l.svg"
+                alt="GitHub Icon"
+                width="100"
+                height="100"
+              />
             </a>
           </div>
         </div>
@@ -201,6 +223,8 @@
           <img
             src="assets/Koladele-Olaitan.webp"
             alt="Koladele Olaitan Image"
+            width="400"
+            height="400"
           />
         </div>
 
@@ -209,6 +233,8 @@
           <img
             src="assets/frontend-l.png"
             alt="Koladele Olaitan - Frontend Developer"
+            width="100"
+            height="100"
           />
         </a>
       </div>
@@ -217,7 +243,14 @@
       <div class="skills" id="skills">
         <div class="skill-title">
           <h2 class="subheading">
-            <span class="star"><img src="assets/star-l.svg" alt="Star" /></span>
+            <span class="star">
+              <img
+                src="assets/star-l.svg"
+                alt="Star"
+                width="100"
+                height="100"
+              />
+            </span>
             Skills
           </h2>
         </div>
@@ -225,62 +258,122 @@
           <div class="skill-slider">
             <h3 class="skill">HTML5</h3>
             <span class="skill-line">
-              <img src="assets/skill-line-l.svg" alt="Skill Line" />
+              <img
+                src="assets/skill-line-l.svg"
+                alt="Skill Line"
+                width="100"
+                height="100"
+              />
             </span>
 
             <h3 class="skill">CSS3 (Sass)</h3>
             <span class="skill-line">
-              <img src="assets/skill-line-l.svg" alt="Skill Line" />
+              <img
+                src="assets/skill-line-l.svg"
+                alt="Skill Line"
+                width="100"
+                height="100"
+              />
             </span>
 
             <h3 class="skill">JavaScript</h3>
             <span class="skill-line">
-              <img src="assets/skill-line-l.svg" alt="Skill Line" />
+              <img
+                src="assets/skill-line-l.svg"
+                alt="Skill Line"
+                width="100"
+                height="100"
+              />
             </span>
 
             <h3 class="skill">React (Learning)</h3>
             <span class="skill-line">
-              <img src="assets/skill-line-l.svg" alt="Skill Line" />
+              <img
+                src="assets/skill-line-l.svg"
+                alt="Skill Line"
+                width="100"
+                height="100"
+              />
             </span>
 
             <h3 class="skill">Bootstrap</h3>
             <span class="skill-line">
-              <img src="assets/skill-line-l.svg" alt="Skill Line" />
+              <img
+                src="assets/skill-line-l.svg"
+                alt="Skill Line"
+                width="100"
+                height="100"
+              />
             </span>
 
             <h3 class="skill">WordPress</h3>
             <span class="skill-line">
-              <img src="assets/skill-line-l.svg" alt="Skill Line" />
+              <img
+                src="assets/skill-line-l.svg"
+                alt="Skill Line"
+                width="100"
+                height="100"
+              />
             </span>
 
             <h3 class="skill">Elementor</h3>
             <span class="skill-line">
-              <img src="assets/skill-line-l.svg" alt="Skill Line" />
+              <img
+                src="assets/skill-line-l.svg"
+                alt="Skill Line"
+                width="100"
+                height="100"
+              />
             </span>
 
             <h3 class="skill">On-page SEO</h3>
             <span class="skill-line">
-              <img src="assets/skill-line-l.svg" alt="Skill Line" />
+              <img
+                src="assets/skill-line-l.svg"
+                alt="Skill Line"
+                width="100"
+                height="100"
+              />
             </span>
 
             <h3 class="skill">Responsive Web Design</h3>
             <span class="skill-line">
-              <img src="assets/skill-line-l.svg" alt="Skill Line" />
+              <img
+                src="assets/skill-line-l.svg"
+                alt="Skill Line"
+                width="100"
+                height="100"
+              />
             </span>
 
             <h3 class="skill">HTML5</h3>
             <span class="skill-line">
-              <img src="assets/skill-line-l.svg" alt="Skill Line" />
+              <img
+                src="assets/skill-line-l.svg"
+                alt="Skill Line"
+                width="100"
+                height="100"
+              />
             </span>
 
             <h3 class="skill">CSS3 (Sass)</h3>
             <span class="skill-line">
-              <img src="assets/skill-line-l.svg" alt="Skill Line" />
+              <img
+                src="assets/skill-line-l.svg"
+                alt="Skill Line"
+                width="100"
+                height="100"
+              />
             </span>
 
             <h3 class="skill">JavaScript</h3>
             <span class="skill-line">
-              <img src="assets/skill-line-l.svg" alt="Skill Line" />
+              <img
+                src="assets/skill-line-l.svg"
+                alt="Skill Line"
+                width="100"
+                height="100"
+              />
             </span>
           </div>
         </div>
@@ -366,7 +459,12 @@
                 target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/emmahux.webp" alt="Project Image" />
+                  <img
+                    src="assets/emmahux.webp"
+                    alt="Project Image"
+                    width="300"
+                    height="300"
+                  />
                 </div>
 
                 <div class="project-details">
@@ -390,7 +488,12 @@
                 target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/web-agency.webp" alt="Project Image" />
+                  <img
+                    src="assets/web-agency.webp"
+                    alt="Project Image"
+                    width="300"
+                    height="300"
+                  />
                 </div>
 
                 <div class="project-details">
@@ -418,7 +521,12 @@
                 target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/twfnft.webp" alt="Project Image" />
+                  <img
+                    src="assets/twfnft.webp"
+                    alt="Project Image"
+                    width="300"
+                    height="300"
+                  />
                 </div>
 
                 <div class="project-details">
@@ -441,7 +549,12 @@
                 target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/nft-template.webp" alt="Project Image" />
+                  <img
+                    src="assets/nft-template.webp"
+                    alt="Project Image"
+                    width="300"
+                    height="300"
+                  />
                 </div>
 
                 <div class="project-details">
@@ -464,7 +577,12 @@
                 target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/csa.webp" alt="Project Image" />
+                  <img
+                    src="assets/csa.webp"
+                    alt="Project Image"
+                    width="300"
+                    height="300"
+                  />
                 </div>
 
                 <div class="project-details">
@@ -492,7 +610,12 @@
                 target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/shopper.webp" alt="Project Image" />
+                  <img
+                    src="assets/shopper.webp"
+                    alt="Project Image"
+                    width="300"
+                    height="300"
+                  />
                 </div>
 
                 <div class="project-details">
@@ -514,7 +637,12 @@
                 target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/bikeylog.webp" alt="Project Image" />
+                  <img
+                    src="assets/bikeylog.webp"
+                    alt="Project Image"
+                    width="300"
+                    height="300"
+                  />
                 </div>
 
                 <div class="project-details">
@@ -538,7 +666,12 @@
                 target="_blank"
               >
                 <div class="project-img">
-                  <img src="assets/onenaija.webp" alt="Project Image" />
+                  <img
+                    src="assets/onenaija.webp"
+                    alt="Project Image"
+                    width="300"
+                    height="300"
+                  />
                 </div>
 
                 <div class="project-details">
@@ -563,7 +696,14 @@
       <div id="contact">
         <div class="contact-first-half order-2">
           <h2 class="subheading">
-            <span class="star"><img src="assets/star-l.svg" alt="Star" /></span>
+            <span class="star">
+              <img
+                src="assets/star-l.svg"
+                alt="Star"
+                width="100"
+                height="100"
+              />
+            </span>
             Reach Out
           </h2>
           <p>For jobs, gigs, contracts, collaborations or enquires.</p>
@@ -605,13 +745,13 @@
           </div>
         </div>
         <div class="contact-second-half order-1">
-          <img src="assets/contact-l.png" alt="" />
+          <img src="assets/contact-l.png" alt="" width="300" height="300" />
         </div>
       </div>
     </div>
 
     <div class="project-cursor">
-      <img src="assets/link-l.svg" alt="Link" />
+      <img src="assets/link-l.svg" alt="Link" width="100" height="100" />
     </div>
     <footer>
       <p>
