Fixed aspect ratio on all images.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
     <!-- ==== sidebar ==== -->
     <div class="sidebar">
       <div class="theme-toggle-desktop dark">
-        <img src="assets/theme-d.svg" alt="Theme toggle" />
+        <img
+          src="assets/theme-d.svg"
+          alt="Theme toggle"
+          width="100"
+          height="100"
+        />
       </div>
       <div class="page-progress-path">
         <div class="pp-bar"></div>
@@ -51,7 +56,12 @@
             href="https://twitter.com/publikphigor"
             class="s-link-inner twitter-icon"
           >
-            <img src="assets/twitter-l.svg" alt="Twiter Icon" />
+            <img
+              src="assets/twitter-l.svg"
+              alt="Twiter Icon"
+              width="100"
+              height="100"
+            />
           </a>
         </div>
 
@@ -60,7 +70,12 @@
             href="https://www.linkedin.com/in/koladeleolaitan/"
             class="s-link-inner linkedin-icon"
           >
-            <img src="assets/linkedin-l.svg" alt="LinkedIn Icon" />
+            <img
+              src="assets/linkedin-l.svg"
+              alt="LinkedIn Icon"
+              width="100"
+              height="100"
+            />
           </a>
         </div>
 
@@ -69,7 +84,12 @@
             href="https://github.com/publikphigor/"
             class="s-link-inner github-icon"
           >
-            <img src="assets/github-l.svg" alt="GitHub Icon" />
+            <img
+              src="assets/github-l.svg"
+              alt="GitHub Icon"
+              width="100"
+              height="100"
+            />
           </a>
         </div>
       </div>
@@ -118,6 +138,8 @@
             <img
               src="assets/logo-l.png"
               alt="Koladele Olaitan Portfolio Logo"
+              width="300"
+              height="300"
             />
           </a>
         </div>
