--- a/index.html
+++ b/index.html
@@ -21,9 +21,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="preload"
+      as="style"
+      onload="this.onload=null; this.rel='stylesheet'"
       href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
     />
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap"
+      />
+    </noscript>
 
     <!-- ==== Varguina Font ==== -->
     <link rel="stylesheet" href="assets/fonts/Varguina/stylesheet.css" />
