--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="Portfolio Website" />
     <meta
       name="description"
-      content="Koladele Olaitan is a developer with an eye for design. He speaks HTML, CSS, and JavaScript fluently. He has a passion for writing quality code."
+      content="Koladele Olaitan is a frontend developer in Nigeria. He speaks HTML, CSS, and JavaScript fluently. He has a passion for contributing to open-source."
     />
     <title>Koladele Olaitan - Portfolio</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.png" />
@@ -252,7 +252,7 @@
         <div class="hero-second-half order-1">
           <img
             src="assets/Koladele-Olaitan.webp"
-            alt="Koladele Olaitan Image"
+            alt="Koladele Olaitan - Frontend developer in Nigeria"
             width="400"
             height="400"
           />
