--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </nav>
 
         <div class="nav-btn">
-          <a href="assets/Koladele-Olaitan.pdf" class="btn" download="">
+          <a href="assets/Koladele_Olaitan_Resume.pdf" class="btn" download="">
             Resume
           </a>
         </div>
@@ -175,7 +175,7 @@
             <a href="https://publikphigor.me/blog/" target="_blank">My Blog</a>
           </li>
           <li>
-            <a href="assets/Koladele-Olaitan.pdf" download="">Resume</a>
+            <a href="assets/Koladele_Olaitan_Resume.pdf" download="">Resume</a>
           </li>
         </ul>
         <div class="mobile-social-links">
