Changed meta title

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       name="description"
       content="Koladele Olaitan is a frontend developer in Nigeria. He speaks HTML, CSS, and JavaScript fluently. He has a passion for contributing to open-source."
     />
-    <title>Koladele Olaitan - Portfolio</title>
+    <title>Koladele Olaitan - Frontend Developer in Nigeria</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.png" />
 
     <!-- ==== Google Fonts ==== -->
