Added new project.

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
               />
             </span>
 
-            <h3 class="skill">React (Learning)</h3>
+            <h3 class="skill">React</h3>
             <span class="skill-line">
               <img
                 src="assets/skill-line-l.svg"
@@ -482,6 +482,38 @@
 
           <div class="project-cards-container">
             <div class="project-cards-list">
+              <a
+                href="https://calcaspectratio.netlify.app/"
+                class="project-card"
+                data-project="1"
+                target="_blank"
+              >
+                <div class="project-img">
+                  <img
+                    src="assets/aspectratio.webp"
+                    alt="Project Image"
+                    width="300"
+                    height="300"
+                  />
+                </div>
+
+                <div class="project-details">
+                  <h3 class="project-name">Aspect Ratio Calculator</h3>
+                  <p class="project-desc">
+                    A simple tool that calculates image dimensions with respect
+                    to a selected aspect ratio.
+                    <br />
+                    It was more of a Maths challenge than a JavaScript
+                    challenge! &#128516;
+                  </p>
+                  <div class="project-tools">
+                    <span>HTML5</span>
+                    <span>CSS</span>
+                    <span>JavaScript</span>
+                    <span>Maths</span>
+                  </div>
+                </div>
+              </a>
               <a
                 href="https://www.emmanuelpriestley.xyz/"
                 class="project-card"
